--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "marked": "^0.3.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-addons-update": "^15.6.0",
+    "react-dnd": "^2.5.1",
+    "react-dnd-html5-backend": "^2.5.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13"
   },
